--- a/任务06.html
+++ b/任务06.html
@@ -14,7 +14,7 @@
         }
         #wai{
             /*border:10px black solid;*/
-            background-image: url(images/bg3.jpg);
+            background-image: url(images/bg3.JPG);
             
             width: 1200px;
             height: 600px;
@@ -52,7 +52,7 @@
             border: solid 5px white;
             height: 120px;
             width: 90px;
-            background-image: url(images/22.jpg);
+            background-image: url(images/22.JPG);
             background-size: contain;
             background-repeat:no-repeat;
             background-color: white;
@@ -74,7 +74,7 @@
             border: solid 5px white;
             height: 120px;
             width: 130px;
-            background-image: url(images/33.jpg);
+            background-image: url(images/33.JPG);
             background-size: contain;
             background-repeat:no-repeat;
             background-color: white;
@@ -96,7 +96,7 @@
             border: solid 5px white;
             height: 120px;
             width: 130px;
-            background-image: url(images/44.jpg);
+            background-image: url(images/44.JPG);
             background-size: contain;
             background-repeat:no-repeat;
             background-color: white;
@@ -118,7 +118,7 @@
             border: solid 5px white;
             height: 150px;
             width: 130px;
-            background-image: url(images/55.jpg);
+            background-image: url(images/55.JPG);
             background-size: contain;
             background-repeat:no-repeat;
             background-color: white;
@@ -140,7 +140,7 @@
             border: solid 5px white;
             height: 130px;
             width: 130px;
-            background-image: url(images/66.jpg);
+            background-image: url(images/66.JPG);
             background-size: contain;
             background-repeat:no-repeat;
             background-color: white;
